# ww

./: CHANGELOG.md  Cargo.toml  Containerfile  Containerfile.deploy  Makefile  README.md  TODOS.md  build.rs
.agents/: prompt.md
.agents/skills/: ww-quickstart.md
.cargo/: audit.toml
.github/workflows/: changelog.yml  rust.yml
capnp/: auth.capnp  membrane.capnp  routing.capnp  shell.capnp  stem.capnp  synapse.capnp  system.capnp
crates/atom/: Cargo.toml
crates/atom/examples/: atom_indexer.rs
crates/atom/src/: lib.rs
crates/atom/tests/: finalizer_integration.rs  integration.rs  membrane_integration.rs  reorg_finalizer.rs  reorg_naive.rs
crates/atom/tests/common/: mod.rs
crates/authority/: Cargo.toml  build.rs  test_session.capnp
crates/authority/src/: epoch.rs  issuer.rs  lib.rs  membrane.rs  terminal.rs
crates/cache/: Cargo.toml
crates/cache/src/: pinner.rs  pinset.rs
crates/cell/: Cargo.toml
crates/cell/src/: cwasm.rs  engine.rs  epoch.rs  fs_intercept.rs  image.rs  lib.rs  loaders.rs  proc.rs
crates/glia/src/: effect.rs  error.rs  eval.rs  expr.rs  lib.rs  oneshot.rs  pattern.rs
crates/guest/: README.md
crates/guest/auth/src/: lib.rs
crates/ipfs/: Cargo.toml
crates/ipfs/src/: lib.rs
crates/membrane/: Cargo.toml  build.rs  test_thing.capnp
crates/membrane/benches/: membrane.rs
crates/membrane/src/: epoch.rs  integration_tests.rs  lib.rs  membrane.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: connection_budget.rs  dispatch.rs  graft.rs  http_client.rs  http_listener.rs  lib.rs  routing.rs  stream_dialer.rs  stream_listener.rs  synapse_abi.rs  vat_client.rs  vat_dial.rs  vat_listener.rs  wagi.rs
crates/schema-id/: Cargo.toml  build.rs
crates/schema-id/src/: lib.rs
crates/stem/: Cargo.toml
crates/stem/src/: atom.rs  ipns.rs  lib.rs
crates/synapse/: Cargo.toml  build.rs
crates/synapse/src/: lib.rs
crates/ww-membrane/: Cargo.toml  build.rs  test_thing.capnp
crates/ww-membrane/benches/: membrane.rs
crates/ww-membrane/src/: integration_tests.rs  lib.rs
doc/: ai-context.md  architecture.md  capabilities.md  cli.md  deployment.md  guest-runtime.md  images.md  init.md  isolate.md  keys.md  positioning.md  replay-protection.md  routing.md  rpc-transport.md  runtimes.md  shell.md
doc/api/: wasm-guest.md
doc/architecture/: invariants.md  producer-authority.mmd  vat-descriptor-routing.mmd
doc/audits/: resumable-effects-phase3-conformance.md
doc/designs/: fuel-scheduling.md  glia-effects.md  http-capability-surface.md  single-authority-capability-model.md  uniform-ww-capability-abi.md  vat-connection-schema-authority.md  vat-serve-only-transport.md
examples/: echo_handler_e2e.rs
examples/auction/: Makefile  README.md  build.rs
examples/auction/etc/init.d/: auction.glia
examples/auction/glia/: register.glia  serve.glia
examples/auction/src/: lib.rs
examples/chess/: Cargo.toml  Makefile  README.md  build.rs
examples/chess/etc/init.d/: chess.glia
examples/chess/glia/: register.glia  serve.glia
examples/chess/src/: chess_authority.rs  lib.rs
examples/counter/: README.md
examples/counter/etc/init.d/: counter.glia
examples/counter/glia/: register.glia
examples/discovery/: Cargo.toml  Makefile  README.md  build.rs  greeter.capnp
examples/discovery/etc/init.d/: discovery.glia
examples/discovery/glia/: register.glia  serve.glia
examples/discovery/src/: lib.rs
examples/echo/: README.md
examples/echo/etc/init.d/: echo.glia
examples/echo/glia/: register.glia
examples/mindshare/: Makefile  README.md  build.rs
examples/mindshare/etc/init.d/: mindshare.glia
examples/mindshare/glia/: register.glia  serve.glia
examples/mindshare/src/: lib.rs
examples/oracle/: Cargo.toml  Makefile  README.md  build.rs
examples/oracle/etc/init.d/: oracle.glia
examples/oracle/glia/: consume.glia  register.glia  serve.glia
examples/oracle/src/: lib.rs
examples/snap-hello-rs/: Cargo.toml
examples/snap-hello-rs/etc/init.d/: snap-hello.glia
examples/snap-hello-rs/glia/: register.glia
examples/snap-hello-rs/src/: jfs.rs  lib.rs
lib/fs/: Cargo.toml
lib/fs/src/: lib.rs
lib/net/src/: ipfs.rs
lib/proc/: Cargo.toml
lib/proc/src/: lib.rs
scripts/: check_deploy_capacity.sh  check_release_ancestry.sh  deploy_verify.sh  install.sh  ipfs_publish_release.sh
src/: admin_uds.rs  config.rs  default_kernel.rs  discovery.rs  executor.rs  host.rs  launcher.rs  lib.rs  local_host.rs  main.rs  metrics.rs  namespace.rs  services.rs
src/cli/: daemon_cmd.rs  doctor_cmd.rs  main.rs  ns_cmd.rs  shell.rs
src/dispatcher/: server.rs
std/: README.md
std/caps/: Cargo.toml  build.rs
std/caps/src/: lib.rs  mcp_adapter.rs
std/kernel/: Cargo.toml  build.rs
std/kernel/src/: attenuate.rs  lib.rs
std/lib/init/: default.glia
std/lib/ww/: core.glia  os.glia  policy.glia  test.glia
std/mcp/: Cargo.toml
std/mcp/src/: lib.rs
std/shell/: Cargo.toml  build.rs
std/shell/src/: lib.rs
std/status/: Cargo.toml  build.rs
std/status/etc/: init.glia
std/status/etc/init.d/: 05-status.glia
std/status/src/: lib.rs
std/system/: Cargo.toml
std/system/src/: lib.rs
tests/: cli_shell_daemon_integration.rs  discovery_integration.rs  runtime_spike_test.rs  shell_discovery_nontty_integration.rs  shell_e2e.rs  snap_hello_rs_http_listener_e2e.rs  status_cell_e2e.rs  status_cell_http_listener_e2e.rs  stdin_shutdown_integration.rs  test_deploy_capacity_check.sh  test_deploy_context.sh  test_deploy_verify.sh  test_ipfs_release_publish.sh  test_ipfs_release_publish_runtime.sh  test_release_ancestry.sh  test_release_workflow.sh
