[workspace]
members = [
    ".",
    "crates/atom",
    "crates/glia",
    "crates/cache",
    "crates/cell",
    "crates/ipfs",
    "crates/membrane",
    "crates/rpc",
    "crates/ww-membrane",
    "crates/schema-id",
    "crates/synapse",
    "crates/stem",
    "crates/guest/auth",
    "std/system",
    "examples/chess",
    "examples/discovery",
]
exclude = [
    "std/caps",          # WASI guest lib — targets wasm32-wasip2, not host
    "std/kernel",        # WASI guest — targets wasm32-wasip2, not host
    "std/shell",         # WASI guest — targets wasm32-wasip2, not host
    "std/mcp",           # WASI guest — targets wasm32-wasip2, not host
    "examples/echo",     # WASI guest — targets wasm32-wasip2, not host
    "examples/counter",  # WASI guest — targets wasm32-wasip2, not host
    "examples/oracle",   # WASI guest — targets wasm32-wasip2, not host
]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base58 = "0.2"
blake3 = "1.8.3"
bytes = "1.11.0"
capnp = "0.25.3"
capnp-rpc = "0.25.0"
capnpc = "0.25.3"
cid = "0.11"
dirs = "5"
ed25519-dalek = "2"
futures = "0.3"
hex = "0.4"
libp2p = { version = "0.56.0", default-features = false }
libp2p-core = "0.43"
libp2p-stream = "0.4.0-alpha"
log = "0.4"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false }
serde = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = "1.48.0"
tokio-util = "0.7.17"
tracing = "0.1"
tracing-subscriber = "0.3.20"
wasip2 = "1.0.2"
wasmtime = "45.0.0"

[package]
name = "ww"
version = "0.1.1"
edition = "2021"

[dependencies]
# Dependencies needed for both host and guest
multiaddr = "0.18.2"
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
base64 = "0.22.1"
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
chrono = { version = "0.4.42", features = ["serde"] }
tracing = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "compat"] }
bytes = { workspace = true }
rand = { workspace = true }
base58 = { workspace = true }
libc = "0.2.177"
tempfile = { workspace = true }
walkdir = "2"
glia = { path = "crates/glia" }
auth = { path = "crates/guest/auth" }
blake3 = { workspace = true }

# Host-only dependencies (not needed for WASM guests)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { workspace = true, features = ["tokio", "tcp", "noise", "yamux", "macros", "identify", "rsa", "request-response", "ed25519", "kad", "autonat", "relay", "dcutr", "quic"] }
libp2p-core = { workspace = true }
ipfs = { path = "crates/ipfs" }
clap = { version = "4.5.51", features = ["derive", "env"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
nix = { version = "0.30.1", features = ["socket"] }
wasmtime = { workspace = true, features = ["call-hook"] }
capnp = { workspace = true }
capnp-rpc = { workspace = true }
libp2p-stream = { workspace = true }
membrane = { path = "crates/membrane" }
atom = { path = "crates/atom" }
stem = { path = "crates/stem" }
cache = { package = "ww-cache", path = "crates/cache" }
cell = { path = "crates/cell" }
rpc = { path = "crates/rpc" }
synapse = { path = "crates/synapse" }
caps = { path = "std/caps" }
blake3 = { workspace = true }
cid = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
axum = "0.8"
rustyline = "15"
dirs = { workspace = true }
indicatif = "0.17"

[[bin]]
name = "ww"
path = "src/cli/main.rs"

[dev-dependencies]
schema-id = { path = "crates/schema-id" }
wasm-encoder = "0.243"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
reqwest = { workspace = true, features = ["rustls-tls", "json", "stream", "multipart"] }

[[bench]]
name = "streams"
harness = false

[[bench]]
name = "glia_map"
harness = false

[[bench]]
name = "arc_cache"
harness = false

[[bench]]
name = "kernel_dispatch"
harness = false

[build-dependencies]
capnpc = { workspace = true }
capnp = { workspace = true }
schema-id = { path = "crates/schema-id" }

# Optimise WASM guests for size; host binary overridden below.
[profile.release]
opt-level = "z"
lto = true
strip = true

# Host binary: optimize for speed (wasmtime JIT benefits from opt-level 2).
[profile.release.package.ww]
opt-level = 2
