[package]
name = "atom"
version = "0.1.0"
edition = "2021"
description = "Off-chain Atom runtime: head-following, finalization, and caching for the Atom contract"


[dependencies]
membrane = { path = "../membrane" }
alloy = { version = "0.4", features = ["rpc-types", "sol-types"] }
capnp = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"
hex = { workspace = true }
rand = "0.8"
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha3 = "0.10"
thiserror = "1"
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "sync", "macros", "signal"] }
tokio-tungstenite = "0.24"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
capnp-rpc = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa"] }
libp2p-core = { workspace = true }
libp2p-identity = { version = "0.2", features = ["ed25519", "secp256k1"] }
rlp = "0.5"
auth = { path = "../guest/auth" }
tokio-test = "0.4"
tokio-util = { workspace = true, features = ["compat"] }
futures = { workspace = true }

[[example]]
name = "atom_indexer"
path = "examples/atom_indexer.rs"

[[example]]
name = "finalizer"
path = "examples/finalizer.rs"
