[package]
name = "ww-cache"
version = "0.1.0"
edition = "2021"
description = "CID-keyed, weight-aware ARC cache managing IPFS pins"

[dependencies]
cid = "0.11"
linked-hash-map = "0.5"
tokio = { version = "1", features = ["sync", "rt", "time"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
