[package]
name = "ww-cache"
version = "0.1.0"
edition = "2021"
description = "CID-keyed, weight-aware ARC cache managing IPFS pins"

[dependencies]
cid = { workspace = true }
linked-hash-map = "0.5"
tokio = { workspace = true, features = ["sync", "rt", "time"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
