[package]
name = "cell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
arc-swap = "1"
lru = "0.12"
cid = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
futures = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
cap-std = "3.4"
wasmtime = { workspace = true, features = ["call-hook"] }
blake3 = { workspace = true }
wasmtime-wasi = "45.0.0"
wasmtime-wasi-io = "45.0.0"

# Workspace crates
atom = { path = "../atom" }
stem = { path = "../stem" }
authority = { package = "wetware-authority", path = "../authority" }
cache = { package = "ww-cache", path = "../cache" }
ipfs = { path = "../ipfs" }

[dev-dependencies]
wat = "1"
tempfile = { workspace = true }
