[package]
name = "ipfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
tar = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cid = "0.11"
cache = { package = "ww-cache", path = "../cache" }
