[package]
name = "ipfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json", "stream", "multipart"] }
tar = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
cid = { workspace = true }
cache = { package = "ww-cache", path = "../cache" }
tokio = { workspace = true, features = ["fs", "io-util"] }
