[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base58 = "0.2"
blake3 = "1"
bytes = "1"
capnp = "0.25.3"
capnp-rpc = "0.25.0"
cid = "0.11"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures = "0.3"
hex = "0.4"
libp2p = { version = "0.56.0", default-features = false, features = ["tokio", "tcp", "noise", "yamux", "macros", "identify", "rsa", "request-response", "ed25519", "kad", "autonat", "relay", "dcutr", "quic"] }
libp2p-core = "0.43"
libp2p-stream = "0.4.0-alpha"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tracing = "0.1"
wasmparser = "0.243"

# Workspace crates
atom = { path = "../atom" }
auth = { path = "../guest/auth" }
cache = { package = "ww-cache", path = "../cache" }
ipfs = { path = "../ipfs" }
membrane = { path = "../membrane" }
schema-id = { path = "../schema-id" }
stem = { path = "../stem" }

[dev-dependencies]
# Used in inline `#[cfg(test)]` blocks of `crates/rpc/src/lib.rs` to
# build synthetic WASM components for membrane-graft tests.
wasm-encoder = "0.243"
