[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base58 = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
capnp = { workspace = true }
capnp-rpc = { workspace = true }
cid = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true, features = ["tokio", "tcp", "noise", "yamux", "macros", "identify", "rsa", "request-response", "ed25519", "kad", "autonat", "relay", "dcutr", "quic"] }
libp2p-core = { workspace = true }
libp2p-stream = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json", "stream", "multipart"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec", "compat"] }
tracing = { workspace = true }

# Workspace crates
atom = { path = "../atom" }
auth = { path = "../guest/auth" }
cache = { package = "ww-cache", path = "../cache" }
ipfs = { path = "../ipfs" }
membrane = { path = "../membrane" }
stem = { path = "../stem" }
