[package]
name = "schema-id"
version = "0.1.0"
edition = "2021"
description = "Build-time helper: extract canonical schema bytes and CIDs from Cap'n Proto schemas"

[dependencies]
capnp = { workspace = true }
blake3 = { workspace = true }
cid = { workspace = true }

[build-dependencies]
capnpc = { workspace = true }
