[package]
name = "stem"
version = "0.1.0"
edition = "2021"
description = "Epoch source abstraction: atomic (on-chain) and eventual (IPNS) backends"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
atom = { path = "../atom" }
membrane = { path = "../membrane" }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
