[package]
name = "ww-membrane"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = { workspace = true }
futures = { workspace = true }

[build-dependencies]
capnpc = { workspace = true }

[dev-dependencies]
capnp-rpc = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "io-util", "sync"] }
tokio-util = { workspace = true, features = ["compat"] }

[[bench]]
name = "membrane"
harness = false
