[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = { workspace = true }
capnp-rpc = { workspace = true }
futures   = { workspace = true }
log       = { workspace = true }
wasip2    = { workspace = true }
shakmaty  = "0.27"
rand      = { workspace = true }
hex       = { workspace = true }
system    = { path = "../../std/system" }

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
serde_json = { workspace = true }
tokio      = { workspace = true, features = ["rt", "macros", "io-util"] }
tokio-util = { workspace = true, features = ["compat"] }
membrane = { package = "wetware-membrane", path = "../../crates/membrane" }

[build-dependencies]
capnpc = { workspace = true }
schema-id = { path = "../../crates/schema-id" }
