[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = { workspace = true }
capnp-rpc = { workspace = true }
futures   = { workspace = true }
log       = { workspace = true }
wasip2    = { workspace = true }
shakmaty  = "0.27"
rand      = { workspace = true }
hex       = { workspace = true }
system    = { path = "../../std/system" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
authority = { package = "wetware-authority", path = "../../crates/authority" }
membrane = { package = "wetware-membrane", path = "../../crates/membrane" }
tokio = { workspace = true, features = ["sync", "time"] }

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
auth       = { path = "../../crates/guest/auth" }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
libp2p-core = { workspace = true }
libp2p-identity = { version = "0.2", features = ["ed25519"] }
serde_json = { workspace = true }
tokio      = { workspace = true, features = ["rt", "macros", "io-util"] }
tokio-util = { workspace = true, features = ["compat"] }

[build-dependencies]
capnpc = { workspace = true }
schema-id = { path = "../../crates/schema-id" }
