[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = { workspace = true }
capnp-rpc = { workspace = true }
futures   = { workspace = true }
log       = { workspace = true }
wasip2    = { workspace = true }
hex       = { workspace = true }
rand      = { workspace = true }
system    = { path = "../../std/system" }

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
tokio      = { workspace = true, features = ["rt", "macros", "io-util"] }
tokio-util = { workspace = true, features = ["compat"] }

[build-dependencies]
capnpc = { workspace = true }
capnp = { workspace = true }
schema-id = { path = "../../crates/schema-id" }
