[package]
name = "snap-hello-rs"
version = "0.1.0"
edition = "2021"

[workspace]  # standalone — not part of the host workspace

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
wasip2 = "1.0.2"
wit-bindgen = "0.41.0"
wagi-guest = { path = "../../crates/wagi-guest" }
serde_json = "1"

[dev-dependencies]
rand = "0.9"
