[package]
name = "caps"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.25.3"
capnp-rpc = "0.25.0"
glia      = { path = "../../crates/glia" }
bs58      = "0.5"
multiaddr = "0.18.2"

[lib]
crate-type = ["rlib"]

[build-dependencies]
capnpc = "0.25.3"
capnp = "0.25.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
