[package]
name = "mcp"
version = "0.1.0"
edition = "2021"

[workspace]  # standalone — not part of the host workspace

[dependencies]
capnp = "0.25.3"
capnp-rpc = "0.25.0"
futures   = "0.3"
glia      = { path = "../../crates/glia" }
log       = "0.4"
wasip2    = "1.0.2"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
system    = { path = "../system" }
caps      = { path = "../caps" }

[lib]
crate-type = ["cdylib"]

# TODO(size): MCP cell is 1.9MB.  Low-hanging fruit to shrink it:
# - capnp-rpc pulls in full `futures` crate; consider capnp-only (no RPC
#   executor) if the MCP cell only parses/builds messages, not serves.
# - Run `wasm-opt -Oz` (binaryen) as a post-build step in the Makefile.
# - Audit caps crate for unused handler code linked into this binary.

[build-dependencies]
# No build deps — schemas come from the caps crate.

# capnp-rpc 0.25.1 + import-wrapper-reuse fix (wetware/ww#586): re-importing an
# already-held capability created a duplicate wrapper Client whose later drop
# poisoned the RPC downcast map, panicking the event loop on the next send of
# that cap. Drop this patch once the fix is released upstream (PR pending on
# capnproto/capnproto-rust; the ww/ branch resolves capnp from crates.io so the
# git patch does not drag in a second capnp).
[patch.crates-io]
capnp-rpc = { git = "https://github.com/wetware/capnproto-rust", branch = "ww/import-fix-0.25-consume" }
