[package]
name = "status"
version = "0.1.0"
edition = "2021"

[workspace]  # standalone — not part of the host workspace

[dependencies]
capnp      = "0.25.3"
capnp-rpc  = "0.25.0"
log        = "0.4"
wasip2     = "1.0.2"
bs58       = "0.5"
multiaddr  = "0.18.2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
system     = { path = "../system" }
wagi-guest = { path = "../../crates/wagi-guest" }

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time"] }

[build-dependencies]
capnpc = "0.25.3"
capnp  = "0.25.3"
